fix support link on IE

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -831,6 +831,8 @@ ul.dropdown li ul a, ul.dropdown li ul .current {
 	position: fixed;
 	top: 390px;
 	left: -26px;
+	/*fix for IE*/
+	left: -2px\9;
 	overflow: hidden;
 	-webkit-border-radius: 0 0 3px 3px;
 	-moz-border-radius: 0 0 3px 3px;
@@ -840,12 +842,11 @@ ul.dropdown li ul a, ul.dropdown li ul .current {
 	-webkit-transform: rotate(-90deg);
 	/* Firefox */
 	-moz-transform: rotate(-90deg);
-	/* IE */
-	-ms-transform: rotate(-90deg);
 	/* Opera */
 	-o-transform: rotate(-90deg);
 	/* Internet Explorer */
-	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+	filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+	transform: rotate(-90deg);
 }
 
 .support a {
